--- a/PostcodesInAnHour/Base.lproj/Main.storyboard
+++ b/PostcodesInAnHour/Base.lproj/Main.storyboard
@@ -1,24 +1,140 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--MainVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainVC" customModule="PostcodesInAnHour" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xk1-12-AqY">
+                                <rect key="frame" x="112.5" y="133" width="150" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="iT5-xb-mxf"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NrV-3g-kbR">
+                                <rect key="frame" x="150" y="207" width="74" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Get details"/>
+                                <connections>
+                                    <action selector="btnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gra-fY-Me5"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter a valid postcode without spaces:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gWp-M2-9dC">
+                                <rect key="frame" x="12.5" y="68" width="349" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="gWp-M2-9dC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="07N-wL-1ci"/>
+                            <constraint firstItem="Xk1-12-AqY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KQD-pm-KOD"/>
+                            <constraint firstItem="Xk1-12-AqY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="113" id="RWg-nF-8VW"/>
+                            <constraint firstItem="gWp-M2-9dC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="48" id="ZKe-fa-XNG"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="textField" destination="Xk1-12-AqY" id="Hcx-pP-10P"/>
+                        <segue destination="ygx-Hx-NKN" kind="show" identifier="toResultsVC" id="BjA-4v-qjC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-302" y="233"/>
+        </scene>
+        <!--ResultsVC-->
+        <scene sceneID="RGg-Nr-bgP">
+            <objects>
+                <viewController id="ygx-Hx-NKN" customClass="ResultsVC" customModule="PostcodesInAnHour" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9yS-0N-4sR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aVh-gK-UQM">
+                                <rect key="frame" x="10" y="20" width="56" height="30"/>
+                                <state key="normal" title="  &lt; Back"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="dJ7-9a-M5k"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Postcode" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W8j-uF-Kze">
+                                <rect key="frame" x="137" y="90" width="101.5" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Parish" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TKt-Ea-J1e">
+                                <rect key="frame" x="163.5" y="140" width="47.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Region" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iBh-Fk-9a8">
+                                <rect key="frame" x="161" y="181" width="53" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Country" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1KG-vT-QOL">
+                                <rect key="frame" x="156.5" y="222" width="62" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Constituency" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QPH-aE-I9h">
+                                <rect key="frame" x="136.5" y="263" width="102" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="1KG-vT-QOL" firstAttribute="top" secondItem="iBh-Fk-9a8" secondAttribute="bottom" constant="20" id="0ct-eq-mIQ"/>
+                            <constraint firstItem="QPH-aE-I9h" firstAttribute="top" secondItem="1KG-vT-QOL" secondAttribute="bottom" constant="20" id="DSd-Dm-UeR"/>
+                            <constraint firstItem="QPH-aE-I9h" firstAttribute="centerX" secondItem="9yS-0N-4sR" secondAttribute="centerX" id="II7-sy-Ofz"/>
+                            <constraint firstItem="iBh-Fk-9a8" firstAttribute="centerX" secondItem="9yS-0N-4sR" secondAttribute="centerX" id="LOY-Qz-raP"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="aVh-gK-UQM" secondAttribute="trailing" constant="20" symbolic="YES" id="RA6-R1-4zV"/>
+                            <constraint firstItem="iBh-Fk-9a8" firstAttribute="top" secondItem="TKt-Ea-J1e" secondAttribute="bottom" constant="20" id="TwN-a7-BS8"/>
+                            <constraint firstItem="aVh-gK-UQM" firstAttribute="top" secondItem="fCa-uH-U85" secondAttribute="top" id="US0-uI-12O"/>
+                            <constraint firstItem="TKt-Ea-J1e" firstAttribute="top" secondItem="W8j-uF-Kze" secondAttribute="bottom" constant="20" id="cVC-Fy-9rF"/>
+                            <constraint firstItem="TKt-Ea-J1e" firstAttribute="centerX" secondItem="9yS-0N-4sR" secondAttribute="centerX" id="dFG-z4-OO9"/>
+                            <constraint firstItem="aVh-gK-UQM" firstAttribute="leading" secondItem="fCa-uH-U85" secondAttribute="leading" constant="10" id="fdZ-yg-vk0"/>
+                            <constraint firstItem="W8j-uF-Kze" firstAttribute="top" secondItem="fCa-uH-U85" secondAttribute="top" constant="70" id="rvL-Xc-B3k"/>
+                            <constraint firstItem="1KG-vT-QOL" firstAttribute="centerX" secondItem="9yS-0N-4sR" secondAttribute="centerX" id="tiL-3C-Trr"/>
+                            <constraint firstItem="W8j-uF-Kze" firstAttribute="centerX" secondItem="9yS-0N-4sR" secondAttribute="centerX" id="wIH-pQ-Wv8"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="fCa-uH-U85"/>
+                    </view>
+                    <connections>
+                        <outlet property="constituencyLbl" destination="QPH-aE-I9h" id="nf7-RS-w43"/>
+                        <outlet property="countryLbl" destination="1KG-vT-QOL" id="3ju-JC-itP"/>
+                        <outlet property="parishLbl" destination="TKt-Ea-J1e" id="wtl-Xc-Aqh"/>
+                        <outlet property="postcodeLbl" destination="W8j-uF-Kze" id="gUg-Ab-buZ"/>
+                        <outlet property="regionLbl" destination="iBh-Fk-9a8" id="4hG-ss-YaZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5IE-5i-m45" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="711" y="233"/>
         </scene>
     </scenes>
 </document>
